color contrast fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ Primary color (Green): #769892;
 Secondary color (Orange): #e0b354;
 */
 :root {
-  --primary-color: #c30000;
+  --primary-color: #bb0000;
   --secondary-color: #e0b354;
   --background: #ffd700;
   --link-visited: purple;
